Completed Validation & Added Cert

--- a/DEFRA Dangerous Dogs Index/project.json
+++ b/DEFRA Dangerous Dogs Index/project.json
@@ -6,12 +6,16 @@
     "Logging": "[1.0.10]",
     "Pop.Ups": "[1.0.3]",
     "SharePoint": "[1.0.7]",
+    "UiPath.AdobePdfServices.IntegrationService.Activities": "[4.0.6]",
     "UiPath.Excel.Activities": "[2.11.4]",
     "UiPath.Form.Activities": "[1.8.0]",
     "UiPath.FormActivityLibrary": "[1.8.0]",
     "UiPath.Mail.Activities": "[1.8.6]",
+    "UiPath.PDF.Activities": "[3.16.0]",
     "UiPath.System.Activities": "[21.10.4]",
     "UiPath.UIAutomation.Activities": "[21.4.3]",
+    "UiPath.WebAPI.Activities": "[1.16.2]",
+    "UiPath.Word.Activities": "[1.18.1]",
     "UiPathTeam.SharePoint.Activities": "[1.7.0]"
   },
   "webServices": [],
